Agregado animacion y gradiente

--- a/index.html
+++ b/index.html
@@ -48,15 +48,25 @@
         <!--TEXTO PRINCIPAL-->
         <section class="main__bienvenidos">
 
-        <div class="cuadrado"></div><h1>Bienvenidos a SidneyStudios</h1>
+        <!--APLICANDO EL EFECTO TRANSFORM-->
+        <div class="cuadrado"></div>
+        <!--FIN EFECTO TRANSFORM-->
+
+        <!--APLICANDO EL EFECTO ANIMACION-->
+        <h1>Bienvenidos a SidneyStudios</h1>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
 
         </section>
+        <!--FIN EFECTO ANIMACION-->
+
+
         <!--FIN TEXTO PRINCIPAL-->
         <div class="main__trabajos-titulo"><h1>Algunos de nuestros trabajos</h1></div>
-        <!--CONTENIDO NUESTROS TRABAJOS-->
+
+
+        <!--CONTENIDO NUESTROS TRABAJOS CON GRADIENTE EN EL FONDO-->
         <section class="main__trabajos">
            
             <div class="main__trabajos-proyectos">
@@ -76,10 +86,8 @@
             <span class="main__proyectos-titulo">Proyecto 3</span>
             <span class="main__proyectos-descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque magni repudiandae pariatur cupiditate velit iure voluptate quis maiores, sequi explicabo, accusamus veritatis similique quaerat nesciunt, ipsa ipsum. Officia, fugit ab!</span>
             </div>
-
- 
         </section>
-        <!--FIN CONTENIDO NUESTROS TRABAJOS-->
+        <!--FIN CONTENIDO NUESTROS TRABAJOS CON GRADIENTE EN EL FONDO-->
         </div>
 <footer>
         <!--MENU FOOTER-->
