bootstrap con cambios

--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -46,7 +46,7 @@
    <!--FIN BANNER NOSOTROS-->
 
 
-<div class="main">
+<div class="main__standar">
    <!--TEXTO PRINCIPAL-->
    <section class="items__hosting">
    <h1>Web Hosting</h1>
