--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -45,7 +45,7 @@
    <!--FIN BANNER SERVICIOS-->
 
 
-    <div class="main">
+    <div class="main__standar">
         <section>
             <h2>Nosotros</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
