Terminado con Bootstrap

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <!--FIN EFECTO TRANSFORM-->
 
         <!--APLICANDO EL EFECTO ANIMACION-->
-        <h1>Bienvenidos a SidneyStudios</h1>
+        <h1 class="display-6">Bienvenidos a SidneyStudios</h1>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
 
         </section>
         <!--FIN EFECTO ANIMACION-->
