--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../assets/img/favicon.png" />
+
+    <!--CDN BOOTSTRAP CSS Y JS-->   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!--FIN CDN BOOTSTRAP CSS Y JS-->
+
     <link rel="stylesheet" href="../assets/css/style.css" />
      <!-- GOOGLE FONTS -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,9 +52,9 @@
 
 
     <!--FORMULARIO-->
-    <div class="main">
+    <div class="container">
     <section class="formulario">
-    <h1>Formulario de contácto</h1>
+    <h1 class="display-6">Formulario de contácto</h1>
     <form action="" method="post">
        <div class="form_content">
         <label for="nombre">Nombre</label>
