--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="../assets/img/favicon.png" />
+
+    <!--CDN BOOTSTRAP CSS Y JS-->   
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!--FIN CDN BOOTSTRAP CSS Y JS-->
+
     <link rel="stylesheet" href="../assets/css/style.css" />
      <!-- GOOGLE FONTS -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,43 +47,51 @@
         </header>
 
 
-   <!--BANNER NOSOTROS-->
-   <div class="banner__hosting"></div> 
-   <!--FIN BANNER NOSOTROS-->
+<!--BANNER NOSOTROS-->
+<div class="banner__hosting"></div> 
+<!--FIN BANNER NOSOTROS-->
 
-
+ <!--TEXTO PRINCIPAL-->
 <div class="main__standar">
-   <!--TEXTO PRINCIPAL-->
    <section class="items__hosting">
-   <h1>Web Hosting</h1>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
+   <h1 class="display-5">Web Hosting</h1>
+   <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
+   <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat expedita a esse omnis veritatis aspernatur quo magni officiis maxime sed saepe, soluta vitae cum beatae, culpa suscipit rerum dolores?</p>
    </section>
 </div>
-   <!--FIN TEXTO PRINCIPAL-->
+<!--FIN TEXTO PRINCIPAL-->
 
-   <!--CONTENIDO PRECIOS-->
-<div class="main__hosting">
-<section>
-    <h3>BASICO</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe necessitatibus inventore expedita quas cumque, blanditiis aut itaque magnam dicta voluptates asperiores excepturi nostrum omnis cupiditate dolorum optio! Fugiat, eius?</p>
-    <div class="precio">$3.500,00</div>
-</section>
+    
+<!--CONTENIDO PRECIOS-->
+<div class="container">
+<div class="row">
+    <div class="col-4">
+    <section>
+        <h3 class="display-6">BASICO</h3>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe necessitatibus inventore expedita quas cumque, blanditiis aut itaque magnam dicta voluptates asperiores excepturi nostrum omnis cupiditate dolorum optio! Fugiat, eius?</p>
+        <div class="precio">$3.500,00</div>
+    </section>
+    </div>
 
-<section>
-    <h3>INTERMEDIO</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe necessitatibus inventore expedita quas cumque, blanditiis aut itaque magnam dicta voluptates asperiores excepturi nostrum omnis cupiditate dolorum optio! Fugiat, eius?</p>
-    <div class="precio">$5.500,00</div>
-</section>
+    <div class="col-4">
+    <section>
+        <h3 class="display-6">INTERMEDIO</h3>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe necessitatibus inventore expedita quas cumque, blanditiis aut itaque magnam dicta voluptates asperiores excepturi nostrum omnis cupiditate dolorum optio! Fugiat, eius?</p>
+        <div class="precio">$5.500,00</div>
+    </section>
+    </div>
 
-<section>
-    <h3>AVANZADO</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe necessitatibus inventore expedita quas cumque, blanditiis aut itaque magnam dicta voluptates asperiores excepturi nostrum omnis cupiditate dolorum optio! Fugiat, eius?</p>
-    <div class="precio">$8.500,00</div>
-</section>
+    <div class="col-4">
+    <section>
+        <h3 class="display-6">AVANZADO</h3>
+        <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea saepe necessitatibus inventore expedita quas cumque, blanditiis aut itaque magnam dicta voluptates asperiores excepturi nostrum omnis cupiditate dolorum optio! Fugiat, eius?</p>
+        <div class="precio">$5.500,00</div>
+    </section>
+    </div>
+
 </div>
-
-   <!--FIN CONTENIDO PRECIOS-->
+</div>
+<!--FIN CONTENIDO PRECIOS-->
 
 <footer>
        <!--MENU FOOTER-->
