--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--FIN CDN BOOTSTRAP CSS Y JS-->
 
 
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/estilo.css" />
      <!-- GOOGLE FONTS -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -78,21 +78,21 @@
         <!-- APLICANDO BOOTSTRAP -->
         <section>
         <div class="container bg-grey">
-        <div class="row g-4">
-            <div class="col-12 col-md-6 col-lg-4 efecto">
+        <div class="row">
+            <div class="col-4 main__trabajos-proyectos efecto">
             <img src="assets/img/proyecto_01.jpg" alt="Proyecto 1" title="Proyecto 1" />
             <span class="main__proyectos-titulo">Proyecto 1</span>
             <p class="main__proyectos-descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque magni repudiandae pariatur cupiditate velit iure voluptate quis maiores, sequi explicabo, accusamus veritatis similique quaerat nesciunt, ipsa ipsum. Officia, fugit ab!</p>   
             </div>
     
 
-            <div class="col-12 col-md-6 col-lg-4 efecto">
+            <div class="col-4 main__trabajos-proyectos efecto">
             <img src="assets/img/proyecto_02.jpg" alt="Proyecto 2" title="Proyecto 2" />
             <span class="main__proyectos-titulo">Proyecto 2</span>
             <p class="main__proyectos-descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque magni repudiandae pariatur cupiditate velit iure voluptate quis maiores, sequi explicabo, accusamus veritatis similique quaerat nesciunt, ipsa ipsum. Officia, fugit ab!</p>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-4 efecto">
+            <div class="col-4 main__trabajos-proyectos efecto">
             <img src="assets/img/proyecto_03.jpg" alt="Proyecto 3" title="Proyecto 3" />
             <span class="main__proyectos-titulo">Proyecto 3</span>
             <p class="main__proyectos-descripcion">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque magni repudiandae pariatur cupiditate velit iure voluptate quis maiores, sequi explicabo, accusamus veritatis similique quaerat nesciunt, ipsa ipsum. Officia, fugit ab!</p>
