--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,7 +11,7 @@
     <!--FIN CDN BOOTSTRAP CSS Y JS-->
 
 
-    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/estilo.css" />
      <!-- GOOGLE FONTS -->
      <link rel="preconnect" href="https://fonts.googleapis.com">
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
