--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,6 +65,8 @@
 
     <!--FORMULARIO-->
     <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-12">
     <section class="formulario">
     <h1>Formulario de contácto</h1>
     <form action="" method="post">
@@ -104,7 +106,18 @@
         
         </form>
     </section>
-    <!--FIN FORMULARIO-->
+  </div>
+  <!--FIN FORMULARIO-->
+
+  <!--MAPA DE DIRECCION-->
+  <div class="col-lg-6 col-md-6 col-sm-6 mapa">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.622463359373!2d-64.1976206!3d-31.452059000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2567ba6dc71%3A0x75ea7ff20b8b1532!2sTte.%201ro%20Pedro%20Ignacio%20Bean%20150%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1663787935083!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+  </div>
+
+
+</div>
+    
 </div>
 
         <!--FOOTER-->
