--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,6 +9,10 @@
     <!--CDN BOOTSTRAP CSS Y JS-->   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+      <!-- ICONOS BOOTSTRAP -->
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
+    
     <!--FIN CDN BOOTSTRAP CSS Y JS-->
 
 
